--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,58 +1,47 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">Dating App</a>
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
 
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
-        @if (AccountService.currentUser())
-        {
+          @if (accountService.currentUser()) {
+              <li class="nav-item">
+                  <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
+              </li>
+              <li class="nav-item">
+                  <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
+              </li>
+              <li class="nav-item">
+                  <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
+              </li>
+          }
           <li class="nav-item">
-            <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/lists" routerLinkActive="active" class="nav-link">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
-          </li>
-       }
-
-          <li class="nav-item">
-            <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
+              <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
           </li>
       </ul>
 
-
-    @if (AccountService.currentUser())
-    {
+      @if (accountService.currentUser()) {
       <div dropdown class="dropdown">
-        <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
-          Welcome {{AccountService.currentUser()?.username | titlecase}}
-        </a>
-        <div *dropdownMenu class="dropdown-menu">
-          <a class="dropdown-item">Edit Profile</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" (click)="logout()">Logout</a>
-        </div>
+          <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
+              Welcome {{accountService.currentUser()?.username | titlecase}}
+          </a>
+          <div *dropdownMenu class="dropdown-menu">
+              <a class="dropdown-item">Edit profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" (click)="logout()">Logout</a>
+          </div>
       </div>
-    }
+      }
 
-    @if(!AccountService.currentUser())
-    {
+      @if (!accountService.currentUser()) {
       <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
-        <input name="Username"
-          [(ngModel)]="model.username"
-          class="form-control me-2"
-          placeholder="Username">
-        <input
-          name="Password"
-          [(ngModel)]="model.password"
-          class="form-control me-2"
-          placeholder="Password"
-          type="password">
-        <button class="btn btn-success" type="submit">Login</button>
+          <input name="username" [(ngModel)]="model.username" class="form-control me-2" placeholder="Username">
+          <input name="password" [(ngModel)]="model.password" class="form-control me-2" placeholder="Password"
+              type="password">
+          <button class="btn btn-success" type="submit">Login</button>
       </form>
-    }
+      }
 
-    </div>
+
+  </div>
 </nav>
